0030875: BSplCLib - check if an upper know is infinite